--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Compiling SRGA
 You can generate the binary file by typing:
 ./autogen.sh
 
-and the binary file will be output into the folder 'bin'.
+and the binary files will be output into the folder 'bin'.
 
 -------------
 See user manual in [SRGA_Manual.pdf] in the archive.
