--- a/README
+++ b/README
@@ -20,5 +20,5 @@ and the binary files will be output into the folder 'bin'.
 -------------
 See user manual in [SRGA_Manual.pdf] in the archive.
 
-And report bugs or give suggestions to ydwang@hit.edu.cn, zhuxiao@gmail.com.
+And report bugs or give suggestions to ydwang@hit.edu.cn, zhuxiao.hit@gmail.com.
 
