--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-SRGA - Sequence Reads Guided Assembler
+PERGA - Paired End Reads Guided Assembler
 ============================
 
 
-SRGA is a a novel sequence reads guided de novo assembly approach which adopts greedy-like prediction strategy for assembling reads to contigs and scaffolds. Instead of using single-end reads to construct contig, SRGA uses paired-end reads and different read overlap sizes from O ≥ Omax to Omin to resolve the gaps and branches. Moreover, by constructing a decision model using machine learning approach based on branch features, SRGA can determine the correct extension in 99.7% of cases. SRGA will also try to extend the contigs by all feasible nucleotides and determine if these multiple extensions due to sequencing errors or repeats by using looking ahead technology.
+PERGA is a a novel sequence reads guided de novo assembly approach which adopts greedy-like prediction strategy for assembling reads to contigs and scaffolds. Instead of using single-end reads to construct contig, PERGA uses paired-end reads and different read overlap sizes from O ≥ Omax to Omin to resolve the gaps and branches. Moreover, by constructing a decision model using machine learning approach based on branch features, PERGA can determine the correct extension in 99.7% of cases. PERGA will also try to extend the contigs by all feasible nucleotides and determine if these multiple extensions due to sequencing errors or repeats by using looking ahead technology.
 
-The simulated paired-end reads data are generated using GemSim (KE McElroy, F Luciani, T Thomas. Gemsim: General, Error-Model Based Simulator of Next-Generation Sequencing Data. BMC Genomics 2012, 13:74), with coverage 50x, 60x, 100x, read lengths 100-bp, and can be downloaded from https://github.com/zhuxiao/sim_data_SRGA.
+The simulated paired-end reads data are generated using GemSim (KE McElroy, F Luciani, T Thomas. Gemsim: General, Error-Model Based Simulator of Next-Generation Sequencing Data. BMC Genomics 2012, 13:74), with coverage 50x, 60x, 100x, read lengths 100-bp, and can be downloaded from https://github.com/zhuxiao/sim_data_PERGA.
 
 The real paired-end reads data can be downloaded from http://bix.ucsd.edu/projects/singlecell/nbt_data.html, with standard genomic DNA prepared from culture, with coverage ~600x. The real data are corrected using Quake (DR Kelley, MC Schatz, SL Salzberg. Quake: Quality-Aware Detection and Correction of Sequencing Errors. Genome Biol 2010, 11(11):-) by the follwing commands:
 	(1) $ count-qmers -f ERA000206_bix_ecoli_ref.fastq -k 15 -q 33 > count_file_ERA000206_bix_ecoli_ref.fastq
@@ -14,7 +14,7 @@ The corrected reads data are used to do the assembly.
 
 
 -------------
-Compiling SRGA
+Compiling PERGA
 
 You can generate the binary file by typing:
 ./autogen.sh
@@ -22,7 +22,7 @@ You can generate the binary file by typing:
 and the binary files and the navigation model will be output into the folder 'bin'.
 
 -------------
-See user manual in [SRGA_Manual.pdf] in the archive.
+See user manual in [PERGA_Manual.pdf] in the archive.
 
 And report bugs or give suggestions to ydwang@hit.edu.cn.
 
