--- a/README
+++ b/README
@@ -7,9 +7,11 @@ PERGA is a novel sequence reads guided de novo assembly approach which adopts gr
 The simulated E.coli paired-end reads data are generated using GemSim (KE McElroy, F Luciani, T Thomas. Gemsim: General, Error-Model Based Simulator of Next-Generation Sequencing Data. BMC Genomics 2012, 13:74), with coverage 50x, 60x, 100x, read lengths 100-bp, and can be downloaded from https://github.com/zhuxiao/data_PERGA.
 
 Assembly command:
-$ ./perga all -k 25 -p 2 -f gemSim_1.16m_50x.fastq -d out_result -o gemSim_50x
+$ ./perga all -f reads_pe.fastq -p 2 -d outDir
 
-Then the the result will be output to out_result, 'gemSim_50x_contigs.fa' and 'gemSim_50x_scaffolds.fa' are the final result.
+Typically, we will just need to specify the paired-end reads data “reads_pe.fastq” by using this command:
+$ ./perga all -f reads_pe.fastq -p 2 -d outDir
+and then “contigs.fa” and “scaffolds.fa” will be produced in the directory “outDir” after assembly.
 
 
 -------------
@@ -22,9 +24,7 @@ and the binary file 'perga' will be output into the folder 'bin'.
 
 
 -------------
-See user manual in [PERGA_Manual.pdf] in the archive.
-
-And report bugs or give suggestions to ydwang@hit.edu.cn.
+Report bugs or give suggestions to ydwang@hit.edu.cn.
 
 Thanks for enjoying it.
 
